        PR c++/39153         * decl2.c (cp_write_global_declarations):         Check DECL_DEFAULTED_FN, not DECL_ARTIFICIAL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144119 138bc75d-0d04-0410-961f-82ee72b054a4